操作日志增加请求方式
